# pinentry-bemenu

./: NOTICE  README.md  meson.build  options.c  options.h  pinentry_bemenu.c  version.h.in
